Fix(cta): Improves spacing and styling
Addresses spacing issues in the CTA block, especially for layouts without images, ensuring better visual appeal.

Introduces column rules for the text column block, enhancing readability and visual separation.
Removes the CSS map file.

--- a/src/_shared/scss/fau-elemental-compatibility-layer/_cta.scss
+++ b/src/_shared/scss/fau-elemental-compatibility-layer/_cta.scss
@@ -251,8 +251,8 @@
       padding-bottom: var(--Spacing-8x, 32px);
 
       .cta-content{
-        padding-bottom: var(--Spacing-2x, 32px);
-        padding: 0 !important;
+        padding-bottom: 0;
+        padding-top: var(--Spacing-6x, 32px);
       }
 
       .cta-button-container {
@@ -261,6 +261,10 @@
         margin: 0;
         padding: 0;
         height: fit-content;
+
+        a.cta-button {
+          margin-top: var(--Spacing-1x, 1rem);
+        }
       }
     }
   }
